# soft_robot_manipulator

./: .gitignore  README.md  Visual 3D registration with flexible kinematic prior.docx  ~$sual 3D registration with flexible kinematic prior.docx
2D arm model/: Arm_Generation.py  FixedLengthPH.py
3D analysis/: 3DFiltering.py  Arm_Gen.py  Demonstration_twoPointsCylinder  DepthCamera_2023-05-05-13-26-48.json  Filtering3D.py  PLYviewer.py  Start_Labelling  TestCampaing_BSplineReconstruction.py  TestCampaing_BSplineReconstruction_record.py  TestCampaing_PCCreconstruction  Test_BsplineReconstruction.py  Test_Cylinder  Test_CylinderReconstruction.py  Test_PCCreconstruction.py  Test_PCCreconstruction_Multisegment.py  Test_PCCreconstruction_Multisegment_2cam.py  tmp0yvcf8ew  tmpbwk047y4  tmpgy_krski
3D arm model/: Arm_Gen.py  Camera.ply  FixedLengthPH.py  Ground_Truth.ply
Robot printing files/: 4246a05zcmu_01.SLDPRT  4246a05zcmu_02.SLDPRT  4246a05zcmu_03.SLDPRT  Accroche.STL  Base.SLDPRT  Base.STL  Fixation caméra haut.SLDPRT  Fixation caméra haut.STL  Fixation caméra.SLDPRT  Fixation caméra.STL  Glissiere.SLDPRT  Patin.SLDPRT  RMD-X6-V2.SLDPRT  Ressort.SLDPRT  Support Moteur v2.SLDPRT  Support Moteur v2.STL  Support Moteur.SLDPRT  Support.STL  Systeme tension.SLDASM  Tendeur.SLDASM  bosch_3842992888_5gjwst2tx4i9xghkkase3ebuq.SLDPRT  fil.SLDPRT  fil2.SLDPRT  fil3.SLDPRT  fil4.SLDPRT  fixation.SLDPRT  profilé.SLDPRT  profilé455.SLDPRT  profilé472.SLDPRT  profilé70.SLDPRT  rondelle accroche.SLDPRT  (+1 more)
capture3D/: CMakeLists.txt  README.md  capture3D.cpp  install_opencv.sh
(+357 files in other folders)
